# gzunder

./: .env.secret  .gitignore  README.md  aerich.ini  docker-compose.yml  main.py  noxfile.py  pyproject.toml  talks.yaml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
core/: comands.py  db.py
migrations/models/: 0_20210519002926_init.sql  0_20210520185121_init.sql  0_20210523133509_init.sql  1_20210519004557_mig3.sql
src/gzunder/: bootstrap.py  commands.py  crud.py  echo_bot.py  echo_bot_fin.py  models.py  settings.py
